--- a/static/stylesheet/droupdown.css
+++ b/static/stylesheet/droupdown.css
@@ -14,7 +14,7 @@
 }
 
 /* The container <div> - needed to position the dropdown content */
-.dropdownlist {
+.dropdown_list {
     position: relative;
     display: inline-block;
 }
