--- a/static/stylesheet/userpage.css
+++ b/static/stylesheet/userpage.css
@@ -9,6 +9,18 @@ position: absolute;
 right: 8px;
 top: 5px;
 }
+.bt{
+background-color: #4CAF50;
+color: white;
+padding: 10px 20px;
+margin: 30px 0;
+border: none;
+cursor: pointer;
+position: absolute;
+left: 8px;
+top: 5px;
+}
+
 
 .btn a{
 text-decoration:none;
